--- a/src/main/resources/templates/dashboard/user/index.html
+++ b/src/main/resources/templates/dashboard/user/index.html
@@ -69,7 +69,7 @@
                                         <th class="">Image / Name</th>
                                         <th class="text-center">Email</th>
                                         <th class="text-center">Roles</th>
-                                        <th class="text-center">Phone</th>
+                                        <th class="text-center" style="min-width: 100px">Phone</th>
                                         <th class="text-center">Address</th>
                                         <th class="text-center">Enabled</th>
                                         <th class="text-center" style="min-width: 140px">Actions</th>
