UPDATE: Front - Restaurant/show

--- a/src/main/resources/templates/front/restaurant/show.html
+++ b/src/main/resources/templates/front/restaurant/show.html
@@ -8,7 +8,7 @@
 <head>
 
     <!-- Title -->
-    <title>Restaurant - Essence Restaurant</title>
+    <title th:text="${'Restaurant - ' + restaurant.name}"></title>
 
 </head>
 
