--- a/src/main/resources/templates/front/menu/show.html
+++ b/src/main/resources/templates/front/menu/show.html
@@ -3,7 +3,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{front/layout/master}">
+      layout:decorate="~{front/_layout/master}">
 
 <head>
 
