--- a/src/main/resources/templates/dashboard/user/create-edit.html
+++ b/src/main/resources/templates/dashboard/user/create-edit.html
@@ -3,7 +3,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{dashboard/layout/master}"
+      layout:decorate="~{dashboard/_layout/master}"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
