--- a/src/main/resources/templates/dashboard/_layout/master.html
+++ b/src/main/resources/templates/dashboard/_layout/master.html
@@ -74,8 +74,8 @@
                                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                                        class="p-0 btn">
                                         <img width="42" class="rounded-circle"
-                                             src="../front/data-images/user/admin.jpg"
-                                             alt="Image">
+                                             th:src="|/front/data-images/user/${currentUser.image ?: '_default-user.png'}|"
+                                             alt="image-user">
                                         <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                     </a>
                                     <div tabindex="-1" role="menu" aria-hidden="true"
@@ -90,8 +90,8 @@
                                                         <div class="widget-content-wrapper">
                                                             <div class="widget-content-left mr-3">
                                                                 <img width="42" class="rounded-circle"
-                                                                     src="../front/data-images/user/admin.jpg"
-                                                                     alt="">
+                                                                     th:src="|/front/data-images/user/${currentUser.image ?: '_default-user.png'}|"
+                                                                     alt="image-user">
                                                             </div>
                                                             <div class="widget-content-left">
                                                                 <div class="widget-heading" sec:authentication="name"></div>
